--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
